Latest unchecked changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,3 +67,6 @@ MinimumiOSVersion=IOS_12
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=VisualStudio2019
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=False
+
