--- a/Config/steamvr_ue_editor_app.json
+++ b/Config/steamvr_ue_editor_app.json
@@ -2,7 +2,7 @@
 	"source": "UE",
 	"applications": [
 		{
-			"app_key": "application.generated.ue.virtual-reality-bp-game-template-15973114.ue4editor-win64-debuggame.exe",
+			"app_key": "application.generated.ue.virtual-reality-bp-game-template-15973114.ue4editor.exe",
 			"launch_type": "url",
 			"url": "steam://launch/",
 			"action_manifest_path": "C:/Projects/PunchBagOnline/Config/SteamVRBindings/steamvr_manifest.json",
